# fizzerb

./: Cargo.toml  README.md
fizzerb-impulse/: Cargo.toml
fizzerb-impulse/src/: compressor.rs  lib.rs
fizzerb-model/: Cargo.toml
fizzerb-model/src/: lib.rs  math.rs
fizzerb-tracer/: Cargo.toml
fizzerb-tracer/src/: lib.rs  ray.rs  response.rs  rng.rs  tracer.rs
projects/: four_walls.json  three_walls.json
spaces/: four_walls.json  three_walls.json
src/: commands.rs  error.rs  main.rs  math.rs  project.rs  rendering.rs  sparse_set.rs  style.rs
src/renderer/: context.rs  mod.rs  recording.rs  shuffler.rs  space.rs  transform.rs
src/renderer/shaders/: shuffle.wgsl
src/widgets/: button.rs  mod.rs
src/widgets/space_editor/: data.rs
src/widgets/space_editor/tool/: cursor.rs  mod.rs  wall.rs
src/widgets/spaceeditor/: data.rs  mod.rs  style.rs  transform.rs
src/widgets/spaceeditor/tool/: cursor.rs  mod.rs
