[package]
name = "fizzerb"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "fizzerb-model",
    "fizzerb-tracer",
    "fizzerb-impulse",
]

[workspace.dependencies]
fizzerb-model = { path = "fizzerb-model" }
fizzerb-tracer = { path = "fizzerb-tracer" }
fizzerb-impulse = { path = "fizzerb-impulse" }
glam = "0.21.3"
log = "0.4.17"
thiserror = "1.0.36"
fastrand = "1.8.0"

[dependencies]
bytemuck = "1.12.1"
env_logger = "0.9.1"
fastrand = { workspace = true }
fizzerb-model = { workspace = true }
fizzerb-tracer = { workspace = true }
fizzerb-impulse = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
hound = "3.5.0"
rayon = "1.5.3"
druid = { git = "https://github.com/linebender/druid", rev = "7c08b32", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"

